--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/scss/bootstrap";
+@import "~angular-calendar/scss/angular-calendar";
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+* {
+  box-sizing: border-box;
+}
+.app {
+}
+.page-wrapper {
+  display: flex;
+}
+.header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+.priority {
+  position: fixed;
+  left: 0;
+}
