--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -2,5 +2,7 @@
   [viewDate]="viewDate"
   [events]="events"
   [refresh]="refresh"
+  [dayStartHour]="inicio"
+  [dayEndHour]="fin"
 >
 </mwl-calendar-week-view>
